--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="/work">Work</a>
+          </li>
+          <li>
+            <a href="/about">About</a>
+          </li>
+          <li>
+            <a href="/contact">Contact</a>
+          </li>
+          <li></li>
+        </ul>
+        <h1>Working Title</h1>
+      </nav>
+    </header>
     {{ content }}
   </body>
 </html>
