some basic structure. match landing to current design files

--- a/_layouts/day.html
+++ b/_layouts/day.html
@@ -21,7 +21,7 @@
           </li>
           <li></li>
         </ul>
-        <h1>Working Title</h1>
+        <h1>DfN</h1>
       </nav>
     </header>
     {{ content }}
