--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -156,6 +156,6 @@ article:before{
   content: " ";
   left: -3em;
   top: 0.5em;
-  background-image:url('/assets/img/crecent.svg');
+  background-image:url("{{'/assets/img/crecent.svg' | relative_url}}");
   background-repeat:no-repeat;
 }
