hard coding paths to accommodate git pages structure

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,13 +1,13 @@
 <nav>
   <ul>
     <li>
-      <a href="/work" class="{% if title == 'Work' %}selected{% endif %}">work</a>
+      <a href="/dayfornight/work" class="{% if title == 'Work' %}selected{% endif %}">work</a>
     </li>
     <li>
-      <a href="/about" class="{% if title == 'About' %}selected{% endif %}">about</a>
+      <a href="/dayfornight/about" class="{% if title == 'About' %}selected{% endif %}">about</a>
     </li>
     <li>
-      <a href="/contact" class="{% if title == 'Contact' %}selected{% endif %}">contact</a>
+      <a href="/dayfornight/contact" class="{% if title == 'Contact' %}selected{% endif %}">contact</a>
     </li>
   </ul>
 </nav> 
