--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -5,7 +5,7 @@ html{
 body.home{
   background-color:#000;
   color:#fff;
-  background-image:url("/assets/img/eclipse_3_edit.jpg");
+  background-image:url("/dayfornight/assets/img/eclipse_3_edit.jpg");
   background-size:cover;
   background-position:50% 30%;
   //height:100%;
@@ -156,6 +156,6 @@ article:before{
   content: " ";
   left: -3em;
   top: 0.5em;
-  background-image:url("/assets/img/crecent.svg");
+  background-image:url("/dayfornight/assets/img/crecent.svg");
   background-repeat:no-repeat;
 }
